Fix bug with optional image in cta

--- a/_includes/cta.html
+++ b/_includes/cta.html
@@ -4,7 +4,7 @@
             <h3 class="text-center">{{ cta-title }}</h3>
             <h1 class="text-center">{{ cta-subtitle }}</h1>
             <p class="text-center">{{ cta-content }}</p>
-            <img src="{{ cta-image }}" alt="{{ cta-title }}" class="lightbox-ignore">
+            {% if cta-image %}<img src="{{ cta-image }}" alt="{{ cta-title }}" class="lightbox-ignore">{% endif %}
             <a href="{{ cta-link }}" class="action-link block mt-8"><span>{{ cta-link-text }} <i class="right-arrow"></i></span></a>
         </div>
     </div>
