add border around main image on template page

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -16,7 +16,7 @@ layout: base
 
     <p>{{ page.description }}</p>
 
-    <div>
+    <div class="border-2 border-gray-400">
         <img src="{{ page.image }}" alt="image of this board">
     </div>
 
