fix border around main image on template page

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -16,8 +16,8 @@ layout: base
 
     <p>{{ page.description }}</p>
 
-    <div class="border-2 border-gray-400">
-        <img src="{{ page.image }}" alt="image of this board">
+    <div class="border-2 border-gray-400 my-4">
+        <img src="{{ page.image }}" alt="image of this board" style="margin: 0;">
     </div>
 
     <button class="py-3 px-4 menu-cta-button text-xl tracking-base">
