--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -16,7 +16,7 @@ layout: base
 
     <p>{{ page.description }}</p>
 
-    <div class="border-2 border-gray-400 my-4">
+    <div class="border-2 border-gray-400 my-4 p-1">
         <img src="{{ page.image }}" alt="image of this board" style="margin: 0;">
     </div>
 
