--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -16,21 +16,28 @@ layout: base
 
     <p>{{ page.description }}</p>
 
+    {% if page.image %}
     <div class="border-2 border-gray-400 my-4 p-1">
         <img src="{{ page.image }}" alt="image of this board" style="margin: 0;">
     </div>
+    {% endif %}
 
+    {% if page.download %}
     <button class="py-3 px-4 menu-cta-button text-xl tracking-base">
         <a class="no-underline" href="{{ site.language[page.lang].top-menu-cta-button-url }}">{{ site.language[page.lang].top-menu-cta-button-text }}</a>
     </button>
+    {% endif %}
 
 </section>
+
+{% if page.overview_description or page.overview_benefits or page.overview_data_sources %}
 
 <div class="article-overview">
     <div class="py-8 max-w-lg px-4 mx-auto my-6">
         <h2 style="color: rgba(0, 0, 0, .84);">Overview</h2>
 
         <div class="flex flex-wrap my-4">
+            {% if page.overview_description %}
             <div class="w-full lg:w-1/3 xl:w-1/3 overflow-hidden mb-4 lg:mb-0 xl:mb-0 pr-2">
                 <div class="px-4 py-4 bg-white h-full">
                     <p class="text-grey-darker uppercase font-bold pb-4">Description</p>
@@ -41,6 +48,8 @@ layout: base
                     </ul>
                 </div>
             </div>
+            {% endif %}
+            {% if page.overview_benefits %}
             <div class="w-full lg:w-1/3 xl:w-1/3 overflow-hidden mb-4 lg:mb-0 xl:mb-0 pr-2">
                 <div class="px-4 py-4 bg-white h-full">
                     <p class="text-grey-darker uppercase font-bold pb-4">Benefits</p>
@@ -51,6 +60,8 @@ layout: base
                     </ul>
                 </div>
             </div>
+            {% endif %}
+            {% if page.overview_data_sources %}
             <div class="w-full lg:w-1/3 xl:w-1/3 overflow-hidden mb-4 lg:mb-0 xl:mb-0 lg:pr-0 xl:pr-0 pr-2">
                 <div class="px-4 py-4 bg-white h-full">
                     <p class="text-grey-darker uppercase font-bold  pb-4">Data Sources</p>
@@ -61,13 +72,18 @@ layout: base
                     </ul>
                 </div>
             </div>
+            {% endif %}
         </div>
     </div>
 </div>
 
+{% endif %}
+
+{% if content %}
 <section class="article-content max-w-lg px-4 mx-auto my-8">
     {{ content }}
 </section>
+{% endif %}
 
 <div class="article-overview">
     <div class="py-8 max-w-lg px-4 mx-auto mt-6">
