fix github footer link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,7 @@
                         <div class="mr-12 mt-12 md:mt-0">
                             <h4 class="mb-4 font-light border-b border-grey-light text-3xl text-white">{{ text.footer-github }}</h4>
                             <p class="mb-3 font-bold text-white">
-                                <a href="{% include github-link.html %}" class="text-white no-underline hover:underline font-light">{{ text.footer-github-text }}</a>
+                                <a href="{% include github-link.html %}" class="text-white no-underline hover:underline font-light">{{ text.footer-github-text }}</a>git a
                             </p>
                         </div>
                     <div class="mr-12 mt-12 md:mt-0">
