--- a/_includes/github-link.html
+++ b/_includes/github-link.html
@@ -1,3 +1,3 @@
-{% capture folder_name_with_file_name %}{{ page.path | split: '/' }}{% endcapture %}
-{% assign folder_name = folder_name_with_file_name[1] %}
-||{{ site.language[page.lang].footer-github-url }}||{{ folder_name | strip }}||
+{% assign path_splitted = page.path | split: '/' %}
+{% assign folder_name = path_splitted[1] %}
+{{ site.language[page.lang].footer-github-url }}{{ folder_name | strip }}
