--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -17,7 +17,7 @@
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
     <![endif]-->
     <div class="flex-auto">
-        {% include page_header.html lang_selector="search" %}
+        {% include page_header.html lang_selector="home" %}
 
         {% for lang in site.language %}
             {% if lang contains page.lang %}
