--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,11 @@
 <meta name="theme-color" content="#f68510"/>
 <meta name="description" content="{{ page.description | default: page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+{% if page.search %}
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/instantsearch.css@7.3.1/themes/algolia-min.css" integrity="sha256-HB49n/BZjuqiCtQQf49OdZn63XuKFaxcIHWf0HNKte8=" crossorigin="anonymous">
+{% endif %}
+
 <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
 <link rel="manifest" href="/manifest.json">
 <link href="{{ '/assets/app.css' | relative_url }}?{{ site.time | date: '%s%N' }}" rel="stylesheet">
