--- a/resources/sass/_article_content.scss
+++ b/resources/sass/_article_content.scss
@@ -127,6 +127,10 @@ html {
   -webkit-font-smoothing: antialiased;
 }
 
+.dark-background {
+  background: #f1f0f0;
+}
+
 .article-content {
   h1,
   .h1,
