proposal for related articles (manual, no search) and fix Data sources filter on home page

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -89,6 +89,7 @@ layout: base
 {% capture darkBackground %}{% if darkBackground == 'true' %}false{% else %}true{% endif %}{% endcapture %}
 {% endif %}
 
+{% if page.related %}
 <div class="article-overview {% if darkBackground == 'true' %}dark-background{% endif %}">
     <div class="py-8 max-w-xl px-4 mx-auto pt-6">
         <h2 style="color: rgba(0, 0, 0, .84);">Related Templates</h2>
@@ -96,31 +97,31 @@ layout: base
         <div class="flex flex-wrap my-4">
             <div class="w-full lg:w-1/3 xl:w-1/3 overflow-hidden mb-4 lg:mb-0 xl:mb-0 pr-2">
                 <div class="px-4 py-4 bg-white h-full border-2 rounded border-gray-400">
-                    <a class="no-underline" href="#" data-lity>
-                        <img class="w-full lightbox-ignore" src="{{ page.image }}" alt="{{ page.title }}">
+                    <a class="no-underline" href="{{ page.related[0].url }}" data-lity>
+                        <img class="w-full lightbox-ignore" src="{{ page.related[0].image }}" alt="{{ page.related[0].title }}">
                     </a>
-                    <a class="no-underline text-black" href="#" data-lity>
-                        <div class="text-black mb-2">{{ page.title | escape }}1</div>
+                    <a class="no-underline text-black" href="{{ page.related[0].url }}" data-lity>
+                        <div class="text-black mb-2">{{ page.related[0].title | escape }}</div>
                     </a>
                 </div>
             </div>
             <div class="w-full lg:w-1/3 xl:w-1/3 overflow-hidden mb-4 lg:mb-0 xl:mb-0 pr-2">
                 <div class="px-4 py-4 bg-white h-full border-2 rounded border-gray-400">
-                    <a class="no-underline" href="#" data-lity>
-                        <img class="w-full lightbox-ignore" src="{{ page.image }}" alt="{{ page.title }}">
+                    <a class="no-underline" href="{{ page.related[1].url }}" data-lity>
+                        <img class="w-full lightbox-ignore" src="{{ page.related[1].image }}" alt="{{ page.related[1].title }}">
                     </a>
-                    <a class="no-underline text-black" href="#" data-lity>
-                        <div class="text-black mb-2">{{ page.title | escape }}2</div>
+                    <a class="no-underline text-black" href="{{ page.related[1].url }}" data-lity>
+                        <div class="text-black mb-2">{{ page.related[1].title | escape }}</div>
                     </a>
                 </div>
             </div>
             <div class="w-full lg:w-1/3 xl:w-1/3 overflow-hidden mb-4 lg:mb-0 xl:mb-0 lg:pr-0 xl:pr-0 pr-2">
                 <div class="px-4 py-4 bg-white h-full border-2 rounded border-gray-400">
-                    <a class="no-underline" href="#" data-lity>
-                        <img class="w-full lightbox-ignore" src="{{ page.image }}" alt="{{ page.title }}">
+                    <a class="no-underline" href="{{ page.related[2].url }}" data-lity>
+                        <img class="w-full lightbox-ignore" src="{{ page.related[2].image }}" alt="{{ page.related[2].title }}">
                     </a>
-                    <a class="no-underline text-black" href="#" data-lity>
-                        <div class="text-black mb-2">{{ page.title | escape }}3</div>
+                    <a class="no-underline text-black" href="{{ page.related[2].url }}" data-lity>
+                        <div class="text-black mb-2">{{ page.related[2].title | escape }}</div>
                     </a>
                 </div>
             </div>
@@ -128,6 +129,7 @@ layout: base
     </div>
 </div>
 {% capture darkBackground %}{% if darkBackground == 'true' %}false{% else %}true{% endif %}{% endcapture %}
+{% endif %}
 
 {% capture cta-setting-dark-background %}{{darkBackground}}{% endcapture %}
 {% capture cta-title %}{{ site.language[page.lang].cta-title }}{% endcapture %}
