Fix for really really big screens

--- a/resources/sass/_homepage.scss
+++ b/resources/sass/_homepage.scss
@@ -2,7 +2,7 @@
   background-size: cover;
   position: relative;
   min-height:400px;
-  background: url('/assets/images/homepage/peakboard_templates_background.jpg') no-repeat center;
+  background: url('/assets/images/homepage/peakboard_templates_background.jpg') repeat-x center;
 }
 
 .action-link {
