--- a/public/assets/app.css
+++ b/public/assets/app.css
@@ -5024,7 +5024,7 @@ body.stuck {
   background-size: cover;
   position: relative;
   min-height: 400px;
-  background: url("/assets/images/homepage/peakboard_templates_background.jpg") no-repeat center;
+  background: url("/assets/images/homepage/peakboard_templates_background.jpg") repeat-x center;
 }
 
 .action-link {
