fix error in certain page, add hover for borders, change weight sorting, add margin between title and image on overview

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -96,7 +96,7 @@ layout: base
 
         <div class="flex flex-wrap my-4">
             <div class="w-full lg:w-1/3 xl:w-1/3 overflow-hidden mb-4 lg:mb-0 xl:mb-0 pr-2">
-                <div class="px-4 py-4 bg-white h-full border-2 rounded border-gray-400">
+                <div class="px-4 py-4 bg-white h-full border-2 rounded border-gray-400 hover:border-orange">
                     <a class="no-underline" href="{{ page.related[0].url }}" data-lity>
                         <img class="w-full lightbox-ignore" src="{{ page.related[0].image }}" alt="{{ page.related[0].title }}">
                     </a>
@@ -106,7 +106,7 @@ layout: base
                 </div>
             </div>
             <div class="w-full lg:w-1/3 xl:w-1/3 overflow-hidden mb-4 lg:mb-0 xl:mb-0 pr-2">
-                <div class="px-4 py-4 bg-white h-full border-2 rounded border-gray-400">
+                <div class="px-4 py-4 bg-white h-full border-2 rounded border-gray-400 hover:border-orange">
                     <a class="no-underline" href="{{ page.related[1].url }}" data-lity>
                         <img class="w-full lightbox-ignore" src="{{ page.related[1].image }}" alt="{{ page.related[1].title }}">
                     </a>
@@ -116,7 +116,7 @@ layout: base
                 </div>
             </div>
             <div class="w-full lg:w-1/3 xl:w-1/3 overflow-hidden mb-4 lg:mb-0 xl:mb-0 lg:pr-0 xl:pr-0 pr-2">
-                <div class="px-4 py-4 bg-white h-full border-2 rounded border-gray-400">
+                <div class="px-4 py-4 bg-white h-full border-2 rounded border-gray-400 hover:border-orange">
                     <a class="no-underline" href="{{ page.related[2].url }}" data-lity>
                         <img class="w-full lightbox-ignore" src="{{ page.related[2].image }}" alt="{{ page.related[2].title }}">
                     </a>
