--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -43,7 +43,7 @@ layout: base
             <a href="{{ url }}?fromSearch=true">
                 <div>
                     <img src="{{ imageUrl }}" alt="{{ title }}">
-                    <p class="">{{ title }}</p>
+                    <p class="mt-2">{{ title }}</p>
                 </div>
             </a>
         </div>
