Add lazy loading to home page

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -15,6 +15,7 @@
     {% include footer.html %}
     <script src="{{ '/assets/app.js' | relative_url }}?{{ site.time | date: '%s%N' }}"></script>
     <script src="{{ '/assets/search/jquery-1.11.2.min.js' | relative_url }}?{{ site.time | date: '%s%N' }}"></script>
+    {% include lazyload.html %}
 </body>
 
 </html>
