--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -42,7 +42,7 @@ layout: base
         <div class="w-full">
             <a href="{{ url }}?fromSearch=true">
                 <div>
-                    <img src="{{ imageUrl }}" alt="{{ title }}">
+                    <img src="/assets/images/blank.png" alt="{{ title }}" data-echo="{{ imageUrl }}">
                     <p class="mt-2">{{ title }}</p>
                 </div>
             </a>
