--- a/_includes/lazyload.html
+++ b/_includes/lazyload.html
@@ -65,9 +65,11 @@
             if (document.addEventListener) {
                 root.addEventListener('scroll', debounceOrThrottle, false);
                 root.addEventListener('load', debounceOrThrottle, false);
+                root.addEventListener('searchCompleted', debounceOrThrottle, false);
             } else {
                 root.attachEvent('onscroll', debounceOrThrottle);
                 root.attachEvent('onload', debounceOrThrottle);
+                root.attachEvent('searchCompleted', debounceOrThrottle);
             }
         };
 
